# nyc-asthma-failure-map

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml
configs/: params.yml
data/geo/: nyc_holc_redlining.geojson
data/raw/: ACQUISITION.md
docs/: FINDINGS.md  METHODOLOGY.md  index.html  methodology.html
docs/css/: style.css
docs/data/: neighborhoods.geojson  neighborhoods_metadata.json  providers.geojson  stats.json
docs/js/: main.js
scripts/: 01_fetch_providers.py  02_geocode_providers.py  03_process_population.py  04_merge_datasets.py  05_calculate_classes.py  06_export_for_web.py  07_validation.py
src/asthma_map/: __init__.py  io_utils.py  logging_utils.py  paths.py
tests/: __init__.py  conftest.py  test_io_utils.py  test_logging_utils.py  test_paths.py
